BOP-853 fix wrapping display, BOP-861 add UI for sending invite reminders

--- a/modules/core/client/css/core.css
+++ b/modules/core/client/css/core.css
@@ -725,6 +725,8 @@ blockquote {
         width: 100%;
         border: 1px dashed #ddd;
         margin-bottom: 10px;
+        word-break: keep-all;
+        font-size: 85%;
     }
 
     .droppable {
